fix .gitlab-ci.yml: python -> python3

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ cache:
 
 # 実行前スクリプト
 before_script:
-  - python -V
+  - python3 -V
   - pip install virtualenv
   - virtualenv venv
   - source venv/bin/activate
