--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ cache:
 # 実行前スクリプト
 before_script:
   - python3 -V
-  - pip install virtualenv
+  - sudo apt install python3-pip -y
   - virtualenv venv
   - source venv/bin/activate
 
